test/integration/assets/compile_error/no_sigil_z.exs
defmodule ZiglerTest.CompileError.NoSigilZ do
  use Zigler
end
